--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -16,7 +16,7 @@ env:
   VS_VERSION: "Visual Studio 17 2022"
   PLATFORM: "x64"
   CONFIG: "Release"
-  # 修正 Boost 路径（Chocolatey 安装的 boost-msvc-14.3 实际路径）
+  # Chocolatey安装的boost-msvc-14.3实际路径（必须准确）
   BOOST_ROOT: "C:/ProgramData/chocolatey/lib/boost-msvc-14.3/tools/boost_1_79_0"
 
 jobs:
@@ -50,11 +50,21 @@ jobs:
           [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
           iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           
-          # 安装依赖（版本与AzerothCore兼容）
           choco install -y mysql --version=8.0.31
           choco install -y openssl --version=1.1.1q
           choco install -y boost-msvc-14.3 --version=1.79.0  # 对应VS2022的Boost版本
           choco install -y git
+        shell: pwsh
+
+      - name: 验证Boost路径（调试用）
+        run: |
+          Write-Host "检查Boost路径是否存在: ${{ env.BOOST_ROOT }}"
+          if (Test-Path "${{ env.BOOST_ROOT }}") {
+            Write-Host "Boost路径存在"
+            Get-ChildItem "${{ env.BOOST_ROOT }}"  # 列出路径内容，确认结构正确
+          } else {
+            Write-Host "Boost路径不存在！"
+          }
         shell: pwsh
 
       - name: 创建构建目录
@@ -63,20 +73,19 @@ jobs:
           New-Item -ItemType Directory -Path ${{ env.INSTALL_DIR }} -Force | Out-Null
         shell: pwsh
 
-      - name: CMake生成VS2022解决方案（修复Boost查找和政策问题）
+      - name: CMake生成解决方案（修复参数格式和Boost查找）
         run: |
           cmake `
             -G "${{ env.VS_VERSION }}" `
             -A ${{ env.PLATFORM }} `
             -S "${{ env.SOURCE_DIR }}" `
             -B "${{ env.BUILD_DIR }}" `
-            # 处理CMake政策警告，启用BOOST_ROOT识别
-            -DCMAKE_POLICY_DEFAULT_CMP0144=NEW `  # 启用 BOOST_ROOT 变量
-            -DCMAKE_POLICY_DEFAULT_CMP0167=OLD `  # 保留 FindBoost 模块兼容旧版本
-            # Boost 配置（使用正确路径）
+            -DCMAKE_POLICY_DEFAULT_CMP0144=NEW `
+            -DCMAKE_POLICY_DEFAULT_CMP0167=OLD `
             -DBOOST_ROOT="${{ env.BOOST_ROOT }}" `
             -DBoost_INCLUDE_DIR="${{ env.BOOST_ROOT }}/include" `
-            # 其他核心配置
+            -DBoost_LIBRARY_DIR="${{ env.BOOST_ROOT }}/lib" `
+            -DBoost_COMPONENTS="filesystem;program_options;iostreams;regex" `
             -DCMAKE_INSTALL_PREFIX="${{ env.INSTALL_DIR }}" `
             -DCMAKE_BUILD_TYPE="${{ env.CONFIG }}" `
             -DBUILD_AZEROTHCORE_TESTS=OFF `
@@ -86,6 +95,7 @@ jobs:
             -DMYSQL_LIBRARY="C:\Program Files\MySQL\MySQL Server 8.0\lib\libmysql.lib" `
             -DOPENSSL_ROOT_DIR="C:\Program Files\OpenSSL-Win64"
         shell: pwsh
+        # 关键修复：确保每行末尾的反引号（`）后无任何字符（包括空格），参数才能正确拼接
 
       - name: 使用VS2022构建解决方案
         run: |
